syntax = "proto2";

package files;


message BufferNode {
	required string path = 1;
}

message BufferTree {
	repeated BufferNode buffers = 1;
}

message WorkspaceFileTree {
	// list of strings may be more efficient but it's a lot more hassle
	required string payload = 1; // spappolata di json
} //Alla fine non si usa questo per ora ma BufferTree